--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "test:report": "npx playwright show-report"
   },
   "devDependencies": {
-    "@playwright/test": "^1.35.0"
+    "@playwright/test": "^1.35.0",
+    "@types/node": "^25.0.3",
+    "@types/node-fetch": "^2.6.13",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^2.7.0"
   }
 }
